2012-12-06  Adam Klein  <adamk@chromium.org>

        [HTMLTemplateElement] make content readonly and cloneNode(deep) clone content
        https://bugs.webkit.org/show_bug.cgi?id=104181

        Reviewed by Adam Barth.

        * fast/dom/HTMLTemplateElement/cloneNode-expected.txt:
        * fast/dom/HTMLTemplateElement/cloneNode.html:
        * fast/dom/HTMLTemplateElement/contentWrappers-expected.txt: Added.
        * fast/dom/HTMLTemplateElement/contentWrappers.html: Added.
        * fast/dom/HTMLTemplateElement/ownerDocument-expected.txt:
        * fast/dom/HTMLTemplateElement/ownerDocument.html:

2012-12-06  Emil A Eklund  <eae@chromium.org>

        Unreviewed chromium rebaseline for r136885.

        * platform/chromium-mac-lion/compositing/geometry/fixed-position-composited-page-scale-down-expected.png:
        * platform/chromium-mac-lion/platform/chromium/virtual/softwarecompositing/geometry/fixed-position-composited-page-scale-down-expected.png: Added.
        * platform/chromium-mac-snowleopard/compositing/geometry/fixed-position-composited-page-scale-down-expected.png:
        * platform/chromium-mac-snowleopard/platform/chromium/virtual/softwarecompositing/geometry/fixed-position-composited-page-scale-down-expected.png: Added.
        * platform/chromium-mac/compositing/geometry/fixed-position-composited-page-scale-down-expected.png:
        * platform/chromium-mac/platform/chromium/virtual/softwarecompositing/geometry/fixed-position-composited-page-scale-down-expected.png: Added.
        * platform/efl-wk1/compositing/geometry/fixed-position-composited-page-scale-down-expected.png: Added.
        * platform/efl/compositing/geometry/fixed-position-composited-page-scale-down-expected.png: Removed.

2012-12-06  Jochen Eisinger  <jochen@chromium.org>

        [chromium] when forwarding events through the WebPluginContainer, create a UserGestureIndicator if processing a user gesture
        https://bugs.webkit.org/show_bug.cgi?id=104306
