@@ -1,38 +1,0 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8" />
-<title>Resource Timing reparenting elements</title>
-<link rel="author" title="Google" href="http://www.google.com/" />
-<link rel="help" href="http://www.w3.org/TR/resource-timing/#dom-performanceresourcetiming-initiatortype"/>
-<script src="/w3c/resources/testharness.js"></script>
-<script src="/w3c/resources/testharnessreport.js"></script>
-<script src="/w3c/webperf/resources/webperftestharness.js"></script>
-<script>
-setup({explicit_done: true});
-var iframe;
-function setup_iframe() {
-    window.setup_iframe = onload_test;
-    iframe = document.getElementById('frameContext');
-    iframe.contentWindow.location = '/w3c/webperf/resources/inject_resource_test.html?id=2';
-}
-function onload_test() {
-    var entries = iframe.contentWindow.performance.webkitGetEntries();
-
-    var expected_entries = {
-        '/w3c/webperf/resources/inject_resource_test.html?id=1': 'iframe',
-    };
-
-    test_resource_entries(entries, expected_entries);
-    done();
-}
-window.setup_iframe = setup_iframe;
-</script>
-</head>
-<body>
-<h1>Description</h1>
-<p>This test validates that reparenting an element doesn't change the initiator document.</p>
-<div id="log"></div>
-<iframe id="frameContext" src="/w3c/webperf/resources/inject_resource_test.html?id=1"></iframe>
-</body>
-</html>
