@@ -93,13 +93,15 @@
       'ENABLE_MUTATION_OBSERVERS=<(enable_mutation_observers)',
       'ENABLE_NAVIGATOR_CONTENT_UTILS=1',
       'ENABLE_PAGE_VISIBILITY_API=1',
+      'ENABLE_PERFORMANCE_TIMELINE=1',
       'ENABLE_POINTER_LOCK=1',
       'ENABLE_PROGRESS_ELEMENT=1',
       'ENABLE_PROXIMITY_EVENTS=0',
       'ENABLE_QUOTA=1',
-      'ENABLE_RESOLUTION_MEDIA_QUERY=0',
       'ENABLE_REQUEST_ANIMATION_FRAME=1',
       'ENABLE_REQUEST_AUTOCOMPLETE=1',
+      'ENABLE_RESOLUTION_MEDIA_QUERY=0',
+      'ENABLE_RESOURCE_TIMING=1',
       'ENABLE_RUBY=1',
       'ENABLE_SANDBOX=1',
       'ENABLE_SCRIPTED_SPEECH=1',
@@ -115,6 +117,7 @@
       'ENABLE_TOUCH_EVENTS=<(enable_touch_events)',
       'ENABLE_TOUCH_ICON_LOADING=<(enable_touch_icon_loading)',
       'ENABLE_TOUCH_SLIDER=1',
+      'ENABLE_USER_TIMING=1',
       'ENABLE_V8_SCRIPT_DEBUG_SERVER=1',
       'ENABLE_VIDEO=1',
       'ENABLE_VIDEO_TRACK=1',
