@@ -1,3 +1,12 @@
+2012-12-06  James Simonsen  <simonjam@chromium.org>
+
+        [Chromium] Enable Resource Timing and User Timing
+        https://bugs.webkit.org/show_bug.cgi?id=103788
+
+        Reviewed by Tony Gentilcore.
+
+        * features.gypi:
+
 2012-12-06  Jochen Eisinger  <jochen@chromium.org>
 
         [chromium] when forwarding events through the WebPluginContainer, create a UserGestureIndicator if processing a user gesture
