@@ -1,3 +1,14 @@
+2012-12-06  James Simonsen  <simonjam@chromium.org>
+
+        [Chromium] Enable Resource Timing and User Timing
+        https://bugs.webkit.org/show_bug.cgi?id=103788
+
+        Reviewed by Tony Gentilcore.
+
+        * http/tests/w3c/webperf/submission/resource-timing/html/test_resource_iframe_navigation.html: Removed. Incomplete, shouldn't have been submitted.
+        * platform/chromium/TestExpectations: Remove 'Skip' expectations and add expected failures for iframes.
+        * platform/chromium/fast/dom/Window/window-properties-performance-expected.txt: Added. Now includes User Timing and Resource Timing properties.
+
 2012-12-06  Adam Klein  <adamk@chromium.org>
 
         [HTMLTemplateElement] make content readonly and cloneNode(deep) clone content
